# llm_project_data_v2

./: README.md  pyproject.toml
B_RAG/: 1_rag.ipynb
B_RAG/2_chroma_db/: chroma.sqlite3
B_RAG/3_chroma_db/: chroma.sqlite3
B_RAG/chroma_db/: chroma.sqlite3
LLMs/: API_CALLS.ipynb
