[project]
name = "ai-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "chromadb>=1.5.7",
    "greenlet==3.3.2",
    "langchain>=0.0.27",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "openai>=2.2.0",
    "pypdf>=6.9.2",
    "python-dotenv>=1.0.1",
]
